force-app/main/default/objects/ssot__InsurancePolicyTransaction__dlm/fields/ssot__InsurancePolicyTransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__InsurancePolicyTransactionStatus__c</fullName>
    <label>Insurance Policy Transaction Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InsurancePolicyTransactionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>