force-app/main/default/objects/ssot__InsurancePolicyTransaction__dlm/fields/ssot__InsurancePolicyTransactionType__c.field-meta.xml
<CustomField>
    <fullName>ssot__InsurancePolicyTransactionType__c</fullName>
    <label>Insurance Policy Transaction Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InsurancePolicyTransactionType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>