force-app/main/default/objects/ssot__InsurancePolicyTransaction__dlm/fields/ssot__TransactionFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TransactionFeeAmount__c</fullName>
    <label>Transaction Fee Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TransactionFeeAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>