force-app/main/default/objects/ssot__InsurancePolicyTransaction__dlm/fields/ssot__TransactionPostedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__TransactionPostedDateTime__c</fullName>
    <label>Transaction Posted Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TransactionPostedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>