force-app/main/default/objects/ssot__InsurancePolicyTransaction__dlm/fields/ssot__TransactionTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TransactionTaxAmount__c</fullName>
    <label>Transaction Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TransactionTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>